Auto-LayoutScroll-Fixed-Dashboard
Auto-LayoutScroll-Fixed-Dashboard

--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -4054,8 +4054,8 @@
                                     <constraint firstItem="9nl-bY-ldQ" firstAttribute="top" secondItem="ERC-5q-m9h" secondAttribute="top" constant="13" id="ciE-ii-5LQ"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fjn-zU-hgh">
-                                <rect key="frame" x="0.0" y="70" width="375" height="548"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fjn-zU-hgh">
+                                <rect key="frame" x="0.0" y="70" width="375" height="620"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="XPE-vn-Tsu">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="620"/>
@@ -4703,6 +4703,8 @@
                                     <constraint firstItem="XPE-vn-Tsu" firstAttribute="top" secondItem="i6d-hA-Yis" secondAttribute="top" id="aaR-Gx-0DL"/>
                                     <constraint firstItem="voe-56-dHE" firstAttribute="top" secondItem="fjn-zU-hgh" secondAttribute="top" id="hwj-Xn-z5L"/>
                                     <constraint firstItem="XPE-vn-Tsu" firstAttribute="leading" secondItem="i6d-hA-Yis" secondAttribute="leading" id="hym-cb-uiP"/>
+                                    <constraint firstAttribute="bottom" secondItem="XPE-vn-Tsu" secondAttribute="bottom" id="qEp-xa-rjH"/>
+                                    <constraint firstAttribute="trailing" secondItem="XPE-vn-Tsu" secondAttribute="trailing" id="sLZ-7a-ihj"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="oKH-1z-NIp"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="i6d-hA-Yis"/>
@@ -4846,7 +4848,7 @@
                             <constraint firstItem="h5h-sm-Ul5" firstAttribute="bottom" secondItem="eOg-mR-Hek" secondAttribute="bottom" id="TaG-KL-j8z"/>
                             <constraint firstItem="fjn-zU-hgh" firstAttribute="trailing" secondItem="eOg-mR-Hek" secondAttribute="trailing" id="Y6B-PG-enb"/>
                             <constraint firstItem="ERC-5q-m9h" firstAttribute="leading" secondItem="eOg-mR-Hek" secondAttribute="leading" id="Zov-Cp-Rlf"/>
-                            <constraint firstItem="fjn-zU-hgh" firstAttribute="bottom" secondItem="eOg-mR-Hek" secondAttribute="bottom" id="ezL-E8-RFT"/>
+                            <constraint firstItem="fjn-zU-hgh" firstAttribute="bottom" secondItem="eOg-mR-Hek" secondAttribute="bottom" constant="72" id="ezL-E8-RFT"/>
                             <constraint firstItem="ERC-5q-m9h" firstAttribute="top" secondItem="eOg-mR-Hek" secondAttribute="top" id="gGH-Z7-iI8"/>
                             <constraint firstItem="h5h-sm-Ul5" firstAttribute="top" secondItem="ERC-5q-m9h" secondAttribute="bottom" id="iRg-BP-1q3"/>
                             <constraint firstItem="ERC-5q-m9h" firstAttribute="trailing" secondItem="eOg-mR-Hek" secondAttribute="trailing" id="jMS-D6-wah"/>
