FieldVisit_Screed added
FieldVisit_Screed added

--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dJF-u6-HN7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3628" y="-665"/>
+            <point key="canvasLocation" x="3590" y="-591"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -1037,7 +1037,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xsk-JU-2Kr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5830" y="-619"/>
+            <point key="canvasLocation" x="5113" y="-591"/>
         </scene>
         <!--Attendance-->
         <scene sceneID="cZy-a4-m0H">
@@ -1449,7 +1449,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="4798" y="61"/>
+            <point key="canvasLocation" x="4367" y="90"/>
         </scene>
         <!--Office InVC-->
         <scene sceneID="sMU-ZB-S5W">
@@ -2883,7 +2883,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4uC-7k-2Tb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6482" y="61"/>
+            <point key="canvasLocation" x="5063" y="90"/>
         </scene>
         <!--Early LeaversVC-->
         <scene sceneID="VDP-6j-1Hw">
@@ -3056,7 +3056,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2R9-D7-gRg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7158" y="61"/>
+            <point key="canvasLocation" x="5785" y="89"/>
         </scene>
         <!--LatecomersVC-->
         <scene sceneID="FrY-6U-DgR">
@@ -3229,7 +3229,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3bc-YS-sAA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7822" y="61"/>
+            <point key="canvasLocation" x="6498" y="89"/>
         </scene>
         <!--Manager LeavesVC-->
         <scene sceneID="K3n-up-fmF">
@@ -3517,7 +3517,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vSx-X8-xHd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8465" y="61"/>
+            <point key="canvasLocation" x="7215" y="89"/>
         </scene>
         <!--FaqVC-->
         <scene sceneID="IRS-mk-Qz8">
@@ -3592,7 +3592,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5C5-xS-6HN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6537" y="-619"/>
+            <point key="canvasLocation" x="5801" y="-591"/>
+        </scene>
+        <!--Field VisitVC-->
+        <scene sceneID="dDq-Jd-mCt">
+            <objects>
+                <viewController storyboardIdentifier="FieldVisitVC" modalPresentationStyle="fullScreen" id="iPY-GP-swF" customClass="FieldVisitVC" customModule="Facetek" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="X4y-Ll-pXI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="HzQ-89-aCB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GsU-y9-gHr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6456" y="-595"/>
         </scene>
         <!--Leave-->
         <scene sceneID="0JX-47-dkF">
@@ -4007,7 +4022,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="4798" y="787"/>
+            <point key="canvasLocation" x="4367" y="759"/>
         </scene>
         <!--Home-->
         <scene sceneID="Sbr-RY-vHj">
@@ -4896,7 +4911,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="4799" y="-619"/>
+            <point key="canvasLocation" x="4366" y="-591"/>
         </scene>
     </scenes>
     <resources>
